fixing postcard overflow issue

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -2086,6 +2086,5 @@ body.ie #maps .mini-meshu div {
     display: none;
 }
 #content.postcard {
-    overflow: visible;
-    width: 900px;
+    width: 1000px;
 }
